[FLINK-33506][Connectors/AWS] Add support for jdk17 for AWS connectors (#115)
* [FLINK-33506] Add support for jdk17 for AWS connectors

* Address feedback